--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -37,10 +37,11 @@ jobs:
     - name: Download dependencies
       run: go mod download
 
+    - name: Install Gosec
+      run: go install github.com/securecodewarrior/gosec/v2/cmd/gosec@latest
+
     - name: Run Gosec security scanner
-      uses: securecodewarrior/github-action-gosec@master
-      with:
-        args: '-fmt sarif -out gosec-results.sarif ./...'
+      run: gosec -fmt sarif -out gosec-results.sarif ./...
 
     - name: Upload Gosec results to GitHub Security tab
       uses: github/codeql-action/upload-sarif@v3
