--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,13 @@ jobs:
         # Fetch full history for better golangci-lint performance
         fetch-depth: 0
 
+    - name: Checkout kubernetes-mcp-server dependency
+      uses: actions/checkout@v4
+      with:
+        repository: containers/kubernetes-mcp-server
+        path: ../kubernetes-mcp-server
+        ref: main
+
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
@@ -67,6 +74,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Checkout kubernetes-mcp-server dependency
+      uses: actions/checkout@v4
+      with:
+        repository: containers/kubernetes-mcp-server
+        path: ../kubernetes-mcp-server
+        ref: main
+
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
@@ -99,6 +113,13 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+
+    - name: Checkout kubernetes-mcp-server dependency
+      uses: actions/checkout@v4
+      with:
+        repository: containers/kubernetes-mcp-server
+        path: ../kubernetes-mcp-server
+        ref: main
 
     - name: Set up Go
       uses: actions/setup-go@v5
@@ -139,6 +160,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Checkout kubernetes-mcp-server dependency
+      uses: actions/checkout@v4
+      with:
+        repository: containers/kubernetes-mcp-server
+        path: ../kubernetes-mcp-server
+        ref: main
+
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
@@ -173,6 +201,13 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+
+    - name: Checkout kubernetes-mcp-server dependency
+      uses: actions/checkout@v4
+      with:
+        repository: containers/kubernetes-mcp-server
+        path: ../kubernetes-mcp-server
+        ref: main
 
     - name: Set up Go
       uses: actions/setup-go@v5
