--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: containers/kubernetes-mcp-server
-        path: ../kubernetes-mcp-server
+        path: kubernetes-mcp-server
         ref: main
 
     - name: Set up Go
@@ -78,7 +78,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: containers/kubernetes-mcp-server
-        path: ../kubernetes-mcp-server
+        path: kubernetes-mcp-server
         ref: main
 
     - name: Set up Go
@@ -118,7 +118,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: containers/kubernetes-mcp-server
-        path: ../kubernetes-mcp-server
+        path: kubernetes-mcp-server
         ref: main
 
     - name: Set up Go
@@ -164,7 +164,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: containers/kubernetes-mcp-server
-        path: ../kubernetes-mcp-server
+        path: kubernetes-mcp-server
         ref: main
 
     - name: Set up Go
@@ -206,7 +206,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: containers/kubernetes-mcp-server
-        path: ../kubernetes-mcp-server
+        path: kubernetes-mcp-server
         ref: main
 
     - name: Set up Go
