--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: containers/kubernetes-mcp-server
-        path: ../kubernetes-mcp-server
+        path: kubernetes-mcp-server
         ref: main
 
     - name: Set up Go
