--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: containers/kubernetes-mcp-server
-        path: ../kubernetes-mcp-server
+        path: kubernetes-mcp-server
         ref: main
 
     - name: Set up Go
@@ -89,7 +89,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: containers/kubernetes-mcp-server
-        path: ../kubernetes-mcp-server
+        path: kubernetes-mcp-server
         ref: main
 
     - name: Initialize CodeQL
@@ -123,7 +123,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: containers/kubernetes-mcp-server
-        path: ../kubernetes-mcp-server
+        path: kubernetes-mcp-server
         ref: main
 
     - name: Set up Go
@@ -199,7 +199,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: containers/kubernetes-mcp-server
-        path: ../kubernetes-mcp-server
+        path: kubernetes-mcp-server
         ref: main
 
     - name: Set up Go
