--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,17 +41,18 @@ jobs:
     - name: Run gofumpt formatting check
       run: |
         go install mvdan.cc/gofumpt@latest
-        if [ "$(gofumpt -l .)" != "" ]; then
+        # Exclude kubernetes-mcp-server directory from formatting check
+        if [ "$(find . -name '*.go' -not -path './kubernetes-mcp-server/*' | xargs gofumpt -l)" != "" ]; then
           echo "Code is not properly formatted. Run 'make fmt-modern' to fix."
-          gofumpt -l .
+          find . -name '*.go' -not -path './kubernetes-mcp-server/*' | xargs gofumpt -l
           exit 1
         fi
 
     - name: Run golangci-lint
-      uses: golangci/golangci-lint-action@v6
+      uses: golangci/golangci-lint-action@v9
       with:
         version: latest
-        args: --timeout=5m
+        args: --timeout=5m --skip-dirs=kubernetes-mcp-server
 
     - name: Run unit tests
       run: make test-unit
