--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -136,7 +136,10 @@ jobs:
         fi
 
     - name: Check for misspellings
-      run: misspell -error -locale US . -i "MITRE"
+      run: |
+        # Exclude SARIF files which contain valid "MITRE" organization name
+        find . -name "*.sarif" -exec rm {} \; || true
+        misspell -error -locale US .
 
     - name: Run go vet with additional checks
       run: |
