--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -140,9 +140,10 @@ jobs:
 
     - name: Run go vet with additional checks
       run: |
-        go vet -shadow ./...
-        go vet -copylocks ./...
-        go vet -nilfunc ./...
+        go vet ./...
+        # Install and run shadow analyzer separately (shadow was removed from go vet)
+        go install golang.org/x/tools/go/analysis/passes/shadow/cmd/shadow@v0.39.0
+        shadow ./...
 
     - name: Check Go module tidiness
       run: |
