--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -13,10 +13,45 @@ env:
   GO_VERSION: "1.25"
 
 jobs:
+  # Detect what types of files have changed
+  changes:
+    name: Detect Changes
+    runs-on: ubuntu-latest
+    outputs:
+      code: ${{ steps.changes.outputs.code }}
+      docs: ${{ steps.changes.outputs.docs }}
+      ci: ${{ steps.changes.outputs.ci }}
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v6.0.0
+
+    - name: Check for changes
+      uses: dorny/paths-filter@v3
+      id: changes
+      with:
+        filters: |
+          code:
+            - '**/*.go'
+            - 'go.mod'
+            - 'go.sum'
+            - 'Makefile'
+            - 'cmd/**'
+            - 'pkg/**'
+            - 'test/**'
+          docs:
+            - '**/*.md'
+            - '**/*.txt'
+            - '**/*.rst'
+            - 'LICENSE'
+          ci:
+            - '.github/workflows/**'
+
   # Security scanning and vulnerability detection
   security-scan:
     name: Security Scanning
     runs-on: ubuntu-latest
+    needs: changes
+    if: needs.changes.outputs.code == 'true' || needs.changes.outputs.ci == 'true'
     permissions:
       security-events: write
       contents: read
@@ -61,6 +96,8 @@ jobs:
   codeql-analysis:
     name: CodeQL Analysis
     runs-on: ubuntu-latest
+    needs: changes
+    if: needs.changes.outputs.code == 'true' || needs.changes.outputs.ci == 'true'
     permissions:
       security-events: write
       contents: read
@@ -94,6 +131,8 @@ jobs:
   advanced-linting:
     name: Advanced Linting & Code Quality
     runs-on: ubuntu-latest
+    needs: changes
+    if: needs.changes.outputs.code == 'true' || needs.changes.outputs.docs == 'true' || needs.changes.outputs.ci == 'true'
     steps:
       - name: Checkout code
         uses: actions/checkout@v6.0.0
@@ -133,6 +172,8 @@ jobs:
   dependency-scan:
     name: Dependency Security & License Scan
     runs-on: ubuntu-latest
+    needs: changes
+    if: needs.changes.outputs.code == 'true' || needs.changes.outputs.ci == 'true'
     steps:
       - name: Checkout code
         uses: actions/checkout@v6.0.0
@@ -170,32 +211,43 @@ jobs:
   security-status:
     name: Security Status Check
     runs-on: ubuntu-latest
-    needs: [security-scan, codeql-analysis, advanced-linting, dependency-scan]
+    needs: [changes, security-scan, codeql-analysis, advanced-linting, dependency-scan]
     if: always()
     steps:
       - name: Check all security jobs status
         run: |
-          echo "Security scan result: ${{ needs.security-scan.result }}"
-          echo "CodeQL analysis result: ${{ needs.codeql-analysis.result }}"
-          echo "Advanced linting result: ${{ needs.advanced-linting.result }}"
-          echo "Dependency scan result: ${{ needs.dependency-scan.result }}"
+          # Check if this is docs-only change
+          if [[ "${{ needs.changes.outputs.docs }}" == "true" && "${{ needs.changes.outputs.code }}" == "false" && "${{ needs.changes.outputs.ci }}" == "false" ]]; then
+            echo "Documentation-only change detected"
+            if [[ "${{ needs.advanced-linting.result }}" != "success" ]]; then
+              echo "❌ Documentation linting failed"
+              exit 1
+            fi
+            echo "✅ Documentation validation passed successfully!"
+          else
+            echo "Code or CI changes detected - checking full security suite"
+            echo "Security scan result: ${{ needs.security-scan.result }}"
+            echo "CodeQL analysis result: ${{ needs.codeql-analysis.result }}"
+            echo "Advanced linting result: ${{ needs.advanced-linting.result }}"
+            echo "Dependency scan result: ${{ needs.dependency-scan.result }}"
 
-          if [[ "${{ needs.security-scan.result }}" != "success" ]]; then
-            echo "❌ Security scan failed or was canceled"
-            exit 1
-          fi
-          if [[ "${{ needs.codeql-analysis.result }}" != "success" ]]; then
-            echo "❌ CodeQL analysis failed or was canceled"
-            exit 1
-          fi
-          if [[ "${{ needs.advanced-linting.result }}" != "success" ]]; then
-            echo "❌ Advanced linting failed or was canceled"
-            exit 1
-          fi
-          if [[ "${{ needs.dependency-scan.result }}" != "success" ]]; then
-            echo "❌ Dependency scan failed or was canceled"
-            exit 1
-          fi
+            if [[ "${{ needs.security-scan.result }}" != "success" ]]; then
+              echo "❌ Security scan failed or was canceled"
+              exit 1
+            fi
+            if [[ "${{ needs.codeql-analysis.result }}" != "success" ]]; then
+              echo "❌ CodeQL analysis failed or was canceled"
+              exit 1
+            fi
+            if [[ "${{ needs.advanced-linting.result }}" != "success" ]]; then
+              echo "❌ Advanced linting failed or was canceled"
+              exit 1
+            fi
+            if [[ "${{ needs.dependency-scan.result }}" != "success" ]]; then
+              echo "❌ Dependency scan failed or was canceled"
+              exit 1
+            fi
 
-          echo "✅ All security and code quality checks passed successfully! 🔒"
+            echo "✅ All security and code quality checks passed successfully!"
+          fi
 
